src/app/modules/settings/integrations/add-integration/add-integration.component.scss
/* Variables */
:root {
    --fuse-drawer-width: 85vw !important;
}

.mapping-area {
  max-height: calc(100vh - 300px);
  .fuse-mat-emphasized-affix {
    .mat-form-field-wrapper {
      .mat-form-field-flex {
        border: none;
        border-radius: 0;
  
        .mat-form-field-prefix {
          width: 50%;
        }
  
        .mat-form-field-infix {
          width: 50%;
          padding-left: 10px;
        }
      }
    }
  }
  // .mapping-table .mat-form-field-appearance-fill.mat-form-field-disabled .mat-form-field-flex, body .light .mat-form-field-appearance-fill.mat-form-field-disabled .mat-form-field-flex {
  //   &:last-child {
  //     border-bottom-left-radius: 0.375rem;
  //     border-bottom-right-radius: 0.375rem;
  //   }
  // }
  // .mapping-table {
  //   .fuse-mat-emphasized-affix {
  //     .mat-form-field-wrapper {
  //       .mat-form-field-flex {
  //         &:last-child {
  //           border-bottom-left-radius: 0.375rem;
  //           border-bottom-right-radius: 0.375rem;
  //         }
    
  //       }
  //     }
  //   }
  // }

  .fuse-mat-emphasized-affix {
    .mat-form-field-wrapper {
      .mat-form-field-flex {
        border-radius: 0;

        .mat-form-field-prefix {
          border-radius: 0 !important;
        }
      }

      .mat-form-field-flex:last-child {
        border-bottom-left-radius: 0.375rem !important;
        border-bottom-right-radius: 0.375rem !important;
      }

      .mat-form-field-flex:last-child .mat-form-field-prefix {
        border-bottom-left-radius: 0.375rem !important;
        border-top-left-radius: 0 !important;
      }
    }
  }
  .child-form-field{
    .mat-form-field-wrapper {
      .mat-form-field-flex {
        padding-right: 16px !important;
        padding: 0px !important;
        .mat-form-field-infix {
          padding-left: 0px;
        }
      }
    }
  }

  .fuse-mat-emphasized-affix.mat-focused .mat-form-field-wrapper .mat-form-field-flex {
    background-color: #E0E7FF !important;
  }

  .parent-form-field{
    .mat-form-field-wrapper {
      .mat-form-field-flex {
        padding-right: 16px !important;
        padding: 0px !important;
        .mat-form-field-infix {
          padding-left: 8px;
        }
      }
    }
  }
  .parent-field-icon{
    margin-top: -0.5px;
  }
  .mapping-table:last-child {
    .fuse-mat-emphasized-affix {
      .mat-form-field-wrapper {
        .mat-form-field-flex {
          border-bottom-left-radius: 0.375rem !important;
          border-bottom-right-radius: 0.375rem !important;
  
          .mat-form-field-prefix {
            border-bottom-left-radius: 0.375rem !important;
          border-top-left-radius: 0 !important;
          }
        }
      }
    }
  }

  .mapping-head {
    .fuse-mat-emphasized-affix {
      .mat-form-field-wrapper {
        .mat-form-field-flex {
          border-top-left-radius: 0.375rem;
          border-top-right-radius: 0.375rem;

          .mat-form-field-prefix {
            border-top-left-radius: 0.375rem !important;
            border-bottom-left-radius: 0 !important;
          }
        }
      }
    }
  }

  .fuse-mat-emphasized-affix .mat-form-field-wrapper .mat-form-field-flex {
    background-color: #F1F5F9 !important;
  }

  .mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-prefix, .mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-suffix {
    background-color: white !important;
  }

  .mat-form-field.mat-form-field-appearance-fill.dynamic-rows:hover .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-prefix, .mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix:hover .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-suffix {
    background-color: #E0E7FF !important;
  }
  .child-input.mat-focused,.child-input-parent.mat-focused{
    .mat-form-field-wrapper {
      .mat-form-field-flex {
        background: #E0E7FF !important;
        box-shadow: unset;
      }
    }
  }
  .mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix.mat-focused .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-prefix{
    background: #E0E7FF !important;
  }
  .child-input .mat-form-field-wrapper .mat-form-field-flex {
    background: transparent !important;
  }
  .mat-form-field:hover:not(.static-header) {
    .mat-form-field-flex {
      background-color: #E0E7FF !important;
    }
  }

  .selected-field.mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-prefix, .selected-field.mat-form-field.mat-form-field-appearance-fill.fuse-mat-emphasized-affix .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-suffix {
    background-color: #E0E7FF !important;
  }

  .selected-field.mat-form-field {
    .mat-form-field-flex {
      background-color: #E0E7FF !important;
    }
  }

  .mat-form-field.mat-form-field-appearance-fill.mat-form-field-disabled {
    opacity: 1 !important;
  }

  .required-map-color {
    .mat-select {
      .mat-select-trigger {
          .mat-select-value {
              .mat-select-value-text {
                  > * {
                    color: #DE3A3A !important;
                  }
              }
          }
      }
    }
  }

  .optional-map-color {
    .mat-select {
      .mat-select-trigger {
          .mat-select-value {
              .mat-select-value-text {
                  > * {
                    color: #FFAE42 !important;
                  }
              }
          }
      }
    }
  }


  .hover-btn {
    visibility: hidden;
  }
  .active-hover {
    &:hover {
      .hover-btn {
        visibility: visible;
      }
    }
  }
}
.option-tab-value{
  border-bottom: solid 1px #E0E7FF;
  &:hover{
    background-color: #E0E7FF;
    --tw-text-opacity: 1 !important;
    color: rgba(var(--fuse-primary-500-rgb), var(--tw-text-opacity)) !important;
  }
}

.options-wrapper {
  max-height: calc(100vh - 300px);
}
.fuse-mat-dense {
  .mat-form-field-wrapper {
    .mat-form-field-flex {
      border-radius: 0 !important;
      border: none;
      border-bottom: 1px solid red;
    }
  }
}
@media only screen and (min-width: 1280px) {
  .mapping-area, .options-wrapper {
    max-height: calc(100vh -  258px);
  }
}

